@@ -38,8 +38,8 @@ auto Arguments::getFor(Key key) -> string const
     return tkmDefaults.getFor(Defaults::Default::JsonPath);
   case Key::Timeout:
     return tkmDefaults.getFor(Defaults::Default::Timeout);
-  case Key::Force:
-    return tkmDefaults.getFor(Defaults::Default::Force);
+  case Key::Strict:
+    return tkmDefaults.getFor(Defaults::Default::Strict);
   case Key::Verbose:
     return tkmDefaults.getFor(Defaults::Default::Verbose);
   default:
